Fixed dll name, fixes argumentexception wrapping around everything

--- a/src/JsonPatch/Tavis.JsonPatch.csproj
+++ b/src/JsonPatch/Tavis.JsonPatch.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JsonPatch</RootNamespace>
-    <AssemblyName>JsonPatch</AssemblyName>
+    <AssemblyName>Tavis.JsonPatch</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
