--- a/src/JsonPatchTests/packages.config
+++ b/src/JsonPatchTests/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net452" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.3.1" targetFramework="net452" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net452" developmentDependency="true" />
 </packages>
