- Tweak: The `add` op now performs a merge if the target is an object. - Tweak: New op `addreplace` that implements the old behavior of `add`

--- a/src/JsonPatchTests/JsonPatchTests.csproj
+++ b/src/JsonPatchTests/JsonPatchTests.csproj
@@ -55,6 +55,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEachTests.cs" />
+    <Compile Include="AddReplaceTests.cs" />
     <Compile Include="AddTests.cs" />
     <Compile Include="CopyTests.cs" />
     <Compile Include="MoveTests.cs" />
