Bug Fix: AddOperation Hyphenation
This commit aims to fix a bug within `AddOperation` that can cause fatal conflicts between mods. Also taken time to add unit tests, and make the solution more manageable. All externally used classes should still retain the same namespaces for backwards compatibility.

 - Fixed: `AddOperation` now appends elements to arrays, by forcing the index within the patch file to be displayed as a hyphen, which will be parsed as a new element, and will be appended to the array, rather than inserted in place.

 - Api Feature: `InsertOperation` added, along with "insert" syntax, which can be used as per the original `AddOperation` "bug"; whereby it adds the patch at the specific index given, rather than appending the patch to the array. See unit tests for example usage, and expected outputs.

 - Api Feature: `PrependOperation` added, along with "prepend" syntax, that forces the patch to be prepended to the array, regardless of the index given, including hyphenation. See unit tests for example usage, and expected outputs.

 - Refactor: Moved Operations, and Adaptors to their own namespaces, and folders, for increased readability, and ease of use.

 - Refactor: Added `IValueOperation` for polymorphic operations that expose a value.

 - Refactor: Removed redundant using directives throughout project. Increases readability, and reduces redundant code use.

 - Unit Tests: Added unit test for new `AddOperation`, `InsertOperation`, and `PrependOperation` functionality.

--- a/src/JsonPatch/Tavis.JsonPatch.csproj
+++ b/src/JsonPatch/Tavis.JsonPatch.csproj
@@ -44,12 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseTargetAdapter.cs" />
-    <Compile Include="IPatchTarget.cs" />
-    <Compile Include="JsonNetTargetAdapter.cs" />
+    <Compile Include="Adaptors\BaseTargetAdapter.cs" />
+    <Compile Include="Adaptors\IPatchTarget.cs" />
+    <Compile Include="Adaptors\JsonNetTargetAdapter.cs" />
     <Compile Include="JsonPointer.cs" />
-    <Compile Include="Operation.cs" />
+    <Compile Include="Operations\AddEachOperation.cs" />
+    <Compile Include="Operations\AddOperation.cs" />
+    <Compile Include="Operations\AddReplaceOperation.cs" />
+    <Compile Include="Operations\CopyOperation.cs" />
+    <Compile Include="Operations\InsertOperation.cs" />
+    <Compile Include="Operations\Abstractions\IValueOperation.cs" />
+    <Compile Include="Operations\MoveOperation.cs" />
+    <Compile Include="Operations\Abstractions\Operation.cs" />
+    <Compile Include="Operations\PrependOperation.cs" />
+    <Compile Include="Operations\RemoveOperation.cs" />
+    <Compile Include="Operations\ReplaceOperation.cs" />
+    <Compile Include="Operations\TestOperation.cs" />
     <Compile Include="PatchDocument.cs" />
+    <Compile Include="PathNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
