--- a/src/JsonPatch/Tavis.JsonPatch.csproj
+++ b/src/JsonPatch/Tavis.JsonPatch.csproj
@@ -1,71 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25B26368-23E0-479C-B8DE-12B296587049}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JsonPatch</RootNamespace>
     <AssemblyName>Tavis.JsonPatch</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+    <GenerateAssemblyInfo>False</GenerateAssemblyInfo>
+    <Version>0.5.3-vs.1</Version>
+    <RepositoryUrl>https://github.com/anegostudios/Tavis.JsonPatch</RepositoryUrl>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>..\..\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\lib\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Adaptors\BaseTargetAdapter.cs" />
-    <Compile Include="Adaptors\IPatchTarget.cs" />
-    <Compile Include="Adaptors\JsonNetTargetAdapter.cs" />
-    <Compile Include="JsonPointer.cs" />
-    <Compile Include="Operations\AddEachOperation.cs" />
-    <Compile Include="Operations\AddOperation.cs" />
-    <Compile Include="Operations\AddReplaceOperation.cs" />
-    <Compile Include="Operations\CopyOperation.cs" />
-    <Compile Include="Operations\InsertOperation.cs" />
-    <Compile Include="Operations\Abstractions\IValueOperation.cs" />
-    <Compile Include="Operations\MoveOperation.cs" />
-    <Compile Include="Operations\Abstractions\Operation.cs" />
-    <Compile Include="Operations\PrependOperation.cs" />
-    <Compile Include="Operations\RemoveOperation.cs" />
-    <Compile Include="Operations\ReplaceOperation.cs" />
-    <Compile Include="Operations\TestOperation.cs" />
-    <Compile Include="PatchDocument.cs" />
-    <Compile Include="PathNotFoundException.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
